# insurance-credibility

./: CHANGELOG.md  README.md  pyproject.toml  run_databricks_pytest.py
.github/workflows/: docs.yml  tests.yml
benchmarks/: README.md  benchmark.py
docs/api/: index.html  insurance_credibility.html  search.js
docs/api/insurance_credibility/: classical.html  experience.html
notebooks/: benchmark_credibility.py  benchmark_experience.py  databricks_validation.py  quickstart.ipynb
src/insurance_credibility/: __init__.py
src/insurance_credibility/classical/: __init__.py  buhlmann_straub.py
src/insurance_credibility/experience/: __init__.py  attention.py  dynamic.py  static.py  surrogate.py
tests/classical/: test_buhlmann_straub.py  test_hierarchical.py
tests/experience/: test_attention.py  test_calibration.py  test_dynamic.py  test_integration.py  test_static.py  test_static_bug_fixes_batch3.py  test_surrogate.py  test_types.py  test_utils.py
