[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-credibility"
version = "0.1.0"
description = "Credibility models for UK non-life insurance pricing: classical Bühlmann-Straub and individual-policy Bayesian experience rating"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "actuarial",
    "credibility",
    "buhlmann-straub",
    "insurance",
    "pricing",
    "empirical-bayes",
    "experience-rating",
    "bayesian",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=1.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=1.3",
    "pyarrow>=10.0",
]
deep = ["torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=1.3",
    "pyarrow>=10.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=1.0",
]

[project.urls]
Repository = "https://github.com/burning-cost/insurance-credibility"
Issues = "https://github.com/burning-cost/insurance-credibility/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_credibility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/insurance_credibility"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pandas>=1.3",
    "pyarrow>=10.0",
    "databricks-sdk>=0.99.0",
]
