[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-credibility"
version = "0.1.5"
description = "Credibility models for UK non-life insurance pricing: classical Bühlmann-Straub and individual-policy Bayesian experience rating"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "actuarial",
    "credibility",
    "buhlmann-straub",
    "insurance",
    "pricing",
    "empirical-bayes",
    "experience-rating",
    "bayesian",
    "UK",
    "personal lines",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=1.0",
    # Security: pin transitive dep to fix CVE-2026-30922 (DoS via unbounded recursion)
    "pyasn1>=0.6.3",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0",
    "pyarrow>=10.0",
]
deep = ["torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=2.0",
    "pyarrow>=10.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=1.0",
]

[project.urls]
Homepage = "https://burning-cost.github.io/insurance-credibility"
Repository = "https://github.com/burning-cost/insurance-credibility"
Changelog = "https://github.com/burning-cost/insurance-credibility/releases"
Documentation = "https://burning-cost.github.io/insurance-credibility"
Issues = "https://github.com/burning-cost/insurance-credibility/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_credibility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/insurance_credibility"]
